<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="bids">bids</string>
    <string name="lot">lot#</string>
    <string name="time_left">Time Left</string>
    <string name="grid">Grid</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="end_date">End Date</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="ascending">Ascending</string>
    <string name="descending">descending</string>
</resources>
