<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sort_by_rg">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:id="@+id/sort_by_end_date_rb"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/sort_by_price_rb"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:id="@+id/sort_by_year_rb"/>
    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_by_rg">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:id="@+id/sort_by_asc_btn"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/descending"
            android:id="@+id/sort_by_desc_btn"
            android:layout_margin="5dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>