<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_bg"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:elevation="0dp"
        app:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:cardElevation="2dp">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/filter"
                    android:textColor="@android:color/darker_gray"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:layout_marginEnd="1dp"
                    android:drawableStart="@drawable/ic_filter"
                    android:drawablePadding="0dp"
                    android:gravity="center"
                    android:background="@android:color/white"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_sort"
                    android:layout_marginRight="1dp" />
                <TextView
                    android:id="@+id/sort_list_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/sort"
                    android:textColor="@android:color/darker_gray"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:layout_marginEnd="1dp"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_sort"
                    android:drawablePadding="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_sort"
                    android:layout_marginRight="1dp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/grid"
                    android:textColor="@android:color/darker_gray"
                    android:textAlignment="center"
                    android:padding="5dp"
                    android:background="@android:color/white"
                    android:drawableStart="@drawable/ic_grid"
                    android:drawablePadding="0dp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/ic_sort"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />
</android.support.design.widget.CoordinatorLayout>