<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:layout_height="130dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:id="@+id/item_image_iv" />
            <ToggleButton
                android:id="@+id/item_fav_tb"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/button_favorite"
                android:checked="false"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:text=""
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/item_car_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAlignment="viewStart"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="start" />

            <TextView
                android:id="@+id/item_car_price_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_car_title_tv" />

            <TextView
                android:id="@+id/item_car_currency_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/holo_green_light"
                app:layout_constraintStart_toEndOf="@+id/item_car_price_tv"
                app:layout_constraintTop_toTopOf="@+id/item_car_price_tv" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/lot_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/lot"/>
                    <TextView
                        android:id="@+id/lot_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/bids_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/bids"/>
                    <TextView
                        android:id="@+id/bids_value_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@android:color/darker_gray"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"
                    android:padding="3dp"

                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/time_left_title_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                        android:text="@string/time_left"/>
                    <TextView
                        android:id="@+id/time_left_value_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
                </LinearLayout>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>